# iota-simplewallet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: iota-simplewallet.h  main.c
src/api/: account.c  address.c  event.c  info.c  init.c  transaction.c
src/cmake/: cjson.cmake  curl.cmake  iota.cmake  sodium.cmake  sqlite3.cmake
src/config/: config.c  config.h  http.c  logger.c  logger.h
src/crypto/: crypt.c  crypt.h  password.c  password.h
src/database/helpers/: generate_address.c  get_inputs.c  store_iota_inputs.c
src/database/sqlite3/: db.c  db.h  tables.c  tables.h
src/database/sqlite3/helpers/: account.c  account.h  address.c  address.h  generate_address.c  get_inputs.c  get_inputs.h  store_iota_inputs.c  store_iota_inputs.h  transaction.c  transaction.h
src/database/sqlite3/stores/: account.c  account.h  address.c  address.h  incoming_transaction.c  incoming_transaction.h  input_to_output.c  input_to_output.h  outgoing_transaction.c  outgoing_transaction.h
src/event/: event_store.c  event_store.h
src/gui/: CMakeLists.txt
src/gui/cmake/: GitUtils.cmake  platformdeployqt.cmake  selectdeployqt.cmake
src/gui/src/core/: CMakeLists.txt  key_io.cpp  key_io.h  serialize.h  streams.h  ui-interface.cpp  ui-interface.h
src/gui/src/core/compat/: byteswap.h
src/gui/src/core/interfaces/: chain.cpp  chain.h  handler.cpp  handler.h  node.h  wallet.h
src/gui/src/core/interfaces/impl/: iota-node.cpp  iota-node.hpp  iota-wallet.cpp  iota-wallet.hpp
src/gui/src/core/support/: lockedpool.cpp
src/gui/src/core/util/: error.cpp  threadnames.cpp
src/gui/src/qt/: CMakeLists.txt  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  clientversion.h.in  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.cpp  editaddressdialog.cpp  generateaddressesdialog.cpp  generateaddressesdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  importaccountdialog.cpp  importaccountdialog.h  intro.cpp  iotaqtconfig.cpp.in  iotaqtconfig.h  macnotificationhandler.mm  macos_appnap.mm  main.cpp  modaloverlay.cpp  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  (+43 more)
src/gui/src/qt/forms/: coincontroldialog.ui  createwalletdialog.ui  debugwindow.ui  generateaddressesdialog.ui  importaccountdialog.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui
src/gui/src/qt/res/: Info.plist  bitcoin-qt-res.rc  iota-qt-res.rc
src/gui/src/qt/res/icons/: bitcoin.icns
src/iota/: api.h  generate_address.c  generate_address.h  generate_seed.c  generate_seed.h  get_address_balance.c  get_address_balance.h  init.c  init.h
src/iota/common/: core_client.c  generate_address.c  generate_seed.c  get_inputs.c
src/iota/curl/: get_address_balance.c  get_latest_inclusion.c  get_transaction_inputs_to_address.c  init.c
src/iota/iota.c/: get_address_balance.c  get_latest_inclusion.c  get_node_info.c  get_transaction_inputs_to_address.c  get_transaction_objects.c  init.c  send_transaction.c  send_trytes.c  were_addresses_spent_from.c
src/simplewallet/: CMakeLists.txt
src/simplewallet/cmake/: iota.cmake  iota_simplewalletConfig.cmake.in  sodium.cmake
src/simplewallet/src/: iota-simplewallet.h
src/simplewallet/src/api/: account.c  address.c  event.c  info.c  transaction.c
src/simplewallet/src/config/: config.c  config.h  http.c  http.h
src/simplewallet/src/crypto/: crypt.c  password.c  password.h  random.c  random.h
src/simplewallet/src/database/helpers/: generate_address.c  generate_address.h  get_inputs.h  store_iota_inputs.c
src/simplewallet/src/database/sqlite3/: db.c  db.h  tables.c  tables.h
src/simplewallet/src/database/sqlite3/stores/: account.c  address.c  address.h  incoming_transaction.c  user_data.c  user_data.h
src/simplewallet/src/event/: event_store.c  event_store.h
src/simplewallet/src/iota/: api.h
src/simplewallet/src/iota/common/: generate_address.c  get_inputs.c
src/simplewallet/src/iota/curl/: get_address_balance.c  get_transaction_inputs_to_address.c
src/simplewallet/src/iota/iota.c/: find_transactions.c  get_address_balance.c  get_latest_inclusion.c  get_node_info.c  get_transaction_inputs_to_address.c  send_trytes.c  were_addresses_spent_from.c
src/simplewallet/src/thread/: address_balance_detector.c  deposit_detector.c  event_queue.h  node_info_updater.c  send_transaction.c  send_transaction.h  sent_transaction_confirmer.h  spent_from_detector.h
src/simplewallet/src/thread/helper/: start.c  start.h
src/simplewallet/src/wallet/: main.c
src/simplewallet/src/wallet/cli/: cli.c  cli.h
src/thread/: address_balance_detector.c  address_balance_detector.h  deposit_detector.c  deposit_detector.h  event_queue.c  node_info_updater.c  node_info_updater.h  send_transaction.c  sent_transaction_confirmer.c  spent_from_detector.c
src/thread/helper/: start.c
src/wallet/: main.c
src/wallet/cli/: cli.c  cli.h
